Name:                github
Version:             0.14.0
Synopsis:            Access to the Github API, v3.
Description:
  The Github API provides programmatic access to the full
  Github Web site, from Issues to Gists to repos down to the underlying git data
  like references and trees. This library wraps all of that, exposing a basic but
  Haskell-friendly set of functions and data structures.
  .
  For supported endpoints see "Github.All" module.
  .
  > import qualified Github.All as GH
  >
  > main :: IO ()
  > main = do
  >     possibleUser <- GH.executeRequest' $ GH.userInfoR "phadej"
  >     print possibleUser
  .
  For more of an overview please see the README: <https://github.com/phadej/github/blob/master/README.md>
License:             BSD3
License-file:        LICENSE
Author:              Mike Burns, John Wiegley, Oleg Grenrus
Maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
Homepage:            https://github.com/phadej/github
Copyright:           Copyright 2012-2013 Mike Burns, Copyright 2013-2015 John Wiegley, Copyright 2016 Oleg Grenrus
Category:            Network
Build-type:          Simple
Tested-with:         GHC==7.8.4, GHC==7.10.2
Cabal-version:       >=1.10
Extra-source-files:
  README.md,
  fixtures/issue-search.json,
  fixtures/list-teams.json,
  fixtures/members-list.json,
  fixtures/user-organizations.json,
  fixtures/user.json

flag aeson-compat
  description: Whether to use aeson-compat or aeson-extra
  default: True
  manual: False

source-repository head
  type: git
  location: git://github.com/phadej/github.git

Library
  -- Modules exported by the library.
  Default-Language: Haskell2010
  GHC-Options: -Wall
  Exposed-modules: Github.All,
                   Github.Activity.Starring,
                   Github.Activity.Watching,
                   Github.Auth,
                   Github.Data,
                   Github.Data.Comments,
                   Github.Data.Content,
                   Github.Data.Definitions,
                   Github.Data.Gists,
                   Github.Data.GitData,
                   Github.Data.Id,
                   Github.Data.Issues,
                   Github.Data.Name,
                   Github.Data.PullRequests,
                   Github.Data.Repos,
                   Github.Data.Request,
                   Github.Data.Search,
                   Github.Data.Teams,
                   Github.Data.Webhooks,
                   Github.Gists,
                   Github.Gists.Comments,
                   Github.GitData.Commits,
                   Github.GitData.References,
                   Github.GitData.Trees,
                   Github.GitData.Blobs,
                   Github.Issues,
                   Github.Issues.Comments,
                   Github.Issues.Events,
                   Github.Issues.Labels,
                   Github.Issues.Milestones,
                   Github.Organizations,
                   Github.Organizations.Members,
                   Github.Organizations.Teams,
                   Github.PullRequests,
                   Github.PullRequests.ReviewComments,
                   Github.Repos,
                   Github.Repos.Collaborators,
                   Github.Repos.Comments,
                   Github.Repos.Commits,
                   Github.Repos.Forks,
                   Github.Repos.Webhooks
                   Github.Repos.Webhooks.Validate,
                   Github.Users,
                   Github.Users.Followers
                   Github.Search
                   Github.Request

  -- Packages needed in order to build this package.
  Build-depends: base                  >= 4.7      && <4.9,
                 aeson                 >=0.7.0.6   && <0.11,
                 attoparsec            >=0.11.3.4  && <0.14,
                 base-compat           >=0.6.0     && <0.10,
                 base16-bytestring     >=0.1.1.6   && <0.2,
                 binary                >=0.7.1.0   && <0.9,
                 binary-orphans        >=0.1.0.0   && <0.2,
                 byteable              >=0.1.1     && <0.2,
                 bytestring            >=0.10.4.0  && <0.11,
                 containers            >=0.5.5.1   && <0.6,
                 cryptohash            >=0.11      && <0.12,
                 deepseq               >=1.3.0.2   && <1.5,
                 deepseq-generics      >=0.1.1.2   && <0.3,
                 exceptions            >=0.8.0.2   && <0.9,
                 hashable              >=1.2.3.3   && <1.3,
                 http-client           >=0.4.8.1   && <0.5,
                 http-client-tls       >=0.2.2     && <0.3,
                 http-link-header      >=1.0.1     && <1.1,
                 http-types            >=0.8.6     && <0.10,
                 iso8601-time          >=0.1.4     && <0.2,
                 mtl                   >=2.1.3.1   && <2.3,
                 network-uri           >=2.6.0.3   && <2.7,
                 semigroups            >=0.16.2.2  && <0.19,
                 text                  >=1.2.0.6   && <1.3,
                 time                  >=1.4       && <1.7,
                 transformers          >=0.3.0.0   && <0.6,
                 transformers-compat   >=0.4.0.3   && <0.6,
                 unordered-containers  >=0.2       && <0.3,
                 vector                >=0.10.12.3 && <0.12,
                 vector-instances      >=3.3.0.1   && <3.4,
                 void                  >=0.7       && <0.8

  if flag(aeson-compat)
    Build-depends: aeson-compat >=0.3.0.0 && <0.4
  else
    Build-depends: aeson-extra  >=0.2.0.0 && <0.3

test-suite github-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  other-modules:
    Github.ActivitySpec
    Github.CommitsSpec
    Github.OrganizationsSpec
    Github.ReposSpec
    Github.SearchSpec
    Github.UsersSpec
  main-is: Spec.hs
  ghc-options: -Wall
  build-depends: base,
                 base-compat,
                 github,
                 vector,
                 file-embed,
                 hspec
  if flag(aeson-compat)
    build-depends: aeson-compat
  else
    build-depends: aeson-extra

