name:                github
x-revision:          1
version:             0.15.0
synopsis:            Access to the GitHub API, v3.
description:
  The GitHub API provides programmatic access to the full
  GitHub Web site, from Issues to Gists to repos down to the underlying git data
  like references and trees. This library wraps all of that, exposing a basic but
  Haskell-friendly set of functions and data structures.
  .
  For supported endpoints see "GitHub" module.
  .
  > import qualified GitHub as GH
  >
  > main :: IO ()
  > main = do
  >     possibleUser <- GH.executeRequest' $ GH.userInfoR "phadej"
  >     print possibleUser
  .
  For more of an overview please see the README: <https://github.com/phadej/github/blob/master/README.md>
license:             BSD3
license-file:        LICENSE
author:              Mike Burns, John Wiegley, Oleg Grenrus
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:            https://github.com/phadej/github
copyright:           Copyright 2012-2013 Mike Burns, Copyright 2013-2015 John Wiegley, Copyright 2016 Oleg Grenrus
category:            Network
build-type:          Simple
tested-with:         GHC==7.8.4, GHC==7.10.3, GHC==8.0.1
cabal-version:       >=1.10
extra-source-files:
  README.md,
  CHANGELOG.md,
  fixtures/issue-search.json,
  fixtures/list-teams.json,
  fixtures/members-list.json,
  fixtures/user-organizations.json,
  fixtures/user.json

flag aeson-compat
  description: Whether to use aeson-compat or aeson-extra
  default: True
  manual: False

source-repository head
  type: git
  location: git://github.com/phadej/github.git

Library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    OverloadedStrings
    ScopedTypeVariables
  other-extensions:
    CPP
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    StandaloneDeriving
  exposed-modules:
    GitHub
    GitHub.Internal.Prelude
    GitHub.Auth
    GitHub.Data
    GitHub.Data.Activities
    GitHub.Data.Comments
    GitHub.Data.Content
    GitHub.Data.Definitions
    GitHub.Data.DeployKeys
    GitHub.Data.Events
    GitHub.Data.Gists
    GitHub.Data.GitData
    GitHub.Data.Id
    GitHub.Data.Issues
    GitHub.Data.Milestone
    GitHub.Data.Name
    GitHub.Data.Options
    GitHub.Data.PullRequests
    GitHub.Data.Repos
    GitHub.Data.Request
    GitHub.Data.Search
    GitHub.Data.Teams
    GitHub.Data.URL
    GitHub.Data.Webhooks
    GitHub.Data.Webhooks.Validate
    GitHub.Endpoints.Activity.Events
    GitHub.Endpoints.Activity.Starring
    GitHub.Endpoints.Activity.Watching
    GitHub.Endpoints.Gists
    GitHub.Endpoints.Gists.Comments
    GitHub.Endpoints.GitData.Blobs
    GitHub.Endpoints.GitData.Commits
    GitHub.Endpoints.GitData.References
    GitHub.Endpoints.GitData.Trees
    GitHub.Endpoints.Issues
    GitHub.Endpoints.Issues.Comments
    GitHub.Endpoints.Issues.Events
    GitHub.Endpoints.Issues.Labels
    GitHub.Endpoints.Issues.Milestones
    GitHub.Endpoints.Organizations
    GitHub.Endpoints.Organizations.Members
    GitHub.Endpoints.Organizations.Teams
    GitHub.Endpoints.PullRequests
    GitHub.Endpoints.PullRequests.ReviewComments
    GitHub.Endpoints.Repos
    GitHub.Endpoints.Repos.Collaborators
    GitHub.Endpoints.Repos.Comments
    GitHub.Endpoints.Repos.Commits
    GitHub.Endpoints.Repos.Forks
    GitHub.Endpoints.Repos.Webhooks
    GitHub.Endpoints.Repos.DeployKeys
    GitHub.Endpoints.Search
    GitHub.Endpoints.Users
    GitHub.Endpoints.Users.Followers
    GitHub.Request

  -- Packages needed in order to build this package.
  build-depends: base                  >=4.7       && <4.10,
                 aeson                 >=0.7.0.6   && <1.2,
                 base-compat           >=0.9.1     && <0.10,
                 base16-bytestring     >=0.1.1.6   && <0.2,
                 binary                >=0.7.1.0   && <0.9,
                 binary-orphans        >=0.1.0.0   && <0.2,
                 byteable              >=0.1.1     && <0.2,
                 bytestring            >=0.10.4.0  && <0.11,
                 containers            >=0.5.5.1   && <0.6,
                 cryptohash            >=0.11      && <0.12,
                 deepseq               >=1.3.0.2   && <1.5,
                 deepseq-generics      >=0.1.1.2   && <0.3,
                 exceptions            >=0.8.0.2   && <0.9,
                 hashable              >=1.2.3.3   && <1.3,
                 http-client           >=0.4.8.1   && <0.6,
                 http-client-tls       >=0.2.2     && <0.4,
                 http-link-header      >=1.0.1     && <1.1,
                 http-types            >=0.8.6     && <0.10,
                 iso8601-time          >=0.1.4     && <0.2,
                 mtl                   >=2.1.3.1   && <2.3,
                 network-uri           >=2.6.0.3   && <2.7,
                 semigroups            >=0.16.2.2  && <0.19,
                 text                  >=1.2.0.6   && <1.3,
                 time                  >=1.4       && <1.7,
                 transformers          >=0.3.0.0   && <0.6,
                 transformers-compat   >=0.4.0.3   && <0.6,
                 unordered-containers  >=0.2       && <0.3,
                 vector                >=0.10.12.3 && <0.12,
                 vector-instances      >=3.3.0.1   && <3.4,

                 tls                   >=1.3.5

  if flag(aeson-compat)
    build-depends: aeson-compat >=0.3.0.0 && <0.4
  else
    build-depends: aeson-extra  >=0.2.0.0 && <0.3

test-suite github-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  other-extensions:
    TemplateHaskell
  other-modules:
    GitHub.ActivitySpec
    GitHub.CommitsSpec
    GitHub.OrganizationsSpec
    GitHub.IssuesSpec
    GitHub.PullRequestsSpec
    GitHub.ReposSpec
    GitHub.SearchSpec
    GitHub.UsersSpec
  main-is: Spec.hs
  ghc-options: -Wall
  build-depends: base,
                 base-compat,
                 github,
                 vector,
                 unordered-containers,
                 file-embed,
                 hspec
  if flag(aeson-compat)
    build-depends: aeson-compat
  else
    build-depends: aeson-extra

